1.Created CSS for the basic login form 2. Linked the file to the login.html file

--- a/Assignment 1/pages/login.html
+++ b/Assignment 1/pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login to CodeSpace</title>
-    <link rel="" href=""> <!-- To be created -->
+    <link rel="stylesheet" href="../styles/loginCSS.css"> <!-- To be created -->
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
