--- a/Assignment 1/pages/landing.html
+++ b/Assignment 1/pages/landing.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="#">Sign Up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="login.html">Login</a>
           </li>
         </ul>
       </div>
