--- a/Assignment 1/pages/login.html
+++ b/Assignment 1/pages/login.html
@@ -32,8 +32,8 @@
     </nav>
 
     <section class="login-section">
-        <h1>Login to your Account</h1>
-        <form action="/login" id="form" method="POST">
+        <h1>Login To Your Account</h1>
+        <form action="/login" id="login-form" method="POST">
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" class="form-control" required>
@@ -50,7 +50,7 @@
         </form>
         <div class="links">
             <a href="#">Forgot Password?</a>
-            <a href="#">Sign Up</a>
+            <a href="signUp.html">Sign Up</a>
         </div>
     </section>
 
