--- a/Assignment 1/pages/signUp.html
+++ b/Assignment 1/pages/signUp.html
@@ -6,7 +6,7 @@
     <title>Sign Up to CodeSpace</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">  
-    <link rel="stylesheet" href="#"> <!-- To be created  -->
+    <link rel="stylesheet" href="../styles/signUpCSS.css"> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -30,5 +30,42 @@
             </div>
         </div>
     </nav>
+    <section class="signup-section">
+        <h1>Create Your Account</h1>
+        <form action="/signup" id="signup-form" method="POST">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="role">Select Role:</label>
+                <select id="role" name="role" class="form-select" required>
+                    <option value="" disabled selected>Select your role</option>
+                    <option value="learner">Learner</option>
+                    <option value="instructor">Instructor</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" class="form-control" required>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Confirm Password:</label>
+                <input type="password" id="confirm-password" name="confirm password" class="form-control" required>
+            </div>
+            
+        </form> 
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+    </form>
+    <div class="links">
+        <a href="login.html">Already have an account? Login</a>
+    </div>
+    </section>
 </body>
 </html>
