1. Creating Abstract of learner pasge 2. Changing Get Started button in lnding page to navigate to dashboard using JS.

--- a/Assignment 1/pages/landing.html
+++ b/Assignment 1/pages/landing.html
@@ -35,7 +35,8 @@
     <div class="container">
       <h1>Master Coding, Solve Problems, Build the Future</h1>
       <p>Learn by doing, challenge yourself, and collaborate with coders from around the globe.</p>
-      <button class="btn btn-primary">Get Started</button>
+      <!-- <button class="btn btn-primary" href="learnerHomePage.html" >Get Started</button> -->
+      <button class="btn btn-primary" onclick="window.location.href='learnerHomePage.html'">Get Started</button>
     </div>
   </section>
 
