--- a/Assignment 1/pages/learnerHomePage.html
+++ b/Assignment 1/pages/learnerHomePage.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Learner Dashboard - CodeSpace</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">  
-        <link rel="stylesheet" href=""> <!-- To be Create -->
-    
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Learner Dashboard - CodeSpace</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">  
+    <link rel="stylesheet" href="../styles/learnerHomePageCSS.css"> 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">CodeSpace</a>
@@ -35,23 +34,21 @@
         </div>
     </nav>
 
-    <section class="welcome-section"></section>
-        <div class="container text-center">
+    <section class="welcome-section py-5 bg-primary text-light text-center">
+        <div class="container">
             <h1>Welcome, [Learner Name]!</h1>
             <p>Continue your learning journey and track your progress below.</p>
-            <button class="btn btn-primary">Explore Courses</button>
+            <a href="#courses" class="btn btn-light btn-lg mt-3">Explore Courses</a>
         </div>
     </section>
 
-    <!-- Available Courses Section -->
-    <section class="courses-section">
+    <section id="courses" class="courses-section py-5">
         <div class="container">
-            <h2 class="text-center">Available Courses</h2>
-            <div class="row">
-                <!-- Course Card 1 -->
+            <h2 class="text-center mb-5">Available Courses</h2>
+            <div class="row g-4">
                 <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body">
+                    <div class="card h-100">
+                        <div class="card-body text-center">
                             <h5 class="card-title">Python Programming</h5>
                             <p class="card-text">Learn the basics of Python programming with hands-on exercises.</p>
                             <a href="#" class="btn btn-primary">View Course</a>
@@ -59,10 +56,9 @@
                     </div>
                 </div>
 
-                <!-- Course Card 2 -->
                 <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body">
+                    <div class="card h-100">
+                        <div class="card-body text-center">
                             <h5 class="card-title">JavaScript Basics</h5>
                             <p class="card-text">Master the fundamentals of JavaScript and build dynamic web apps.</p>
                             <a href="#" class="btn btn-primary">View Course</a>
@@ -70,10 +66,9 @@
                     </div>
                 </div>
 
-                <!-- Course Card 3 -->
                 <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body">
+                    <div class="card h-100">
+                        <div class="card-body text-center">
                             <h5 class="card-title">Data Structures in C++</h5>
                             <p class="card-text">Understand core data structures and algorithms using C++.</p>
                             <a href="#" class="btn btn-primary">View Course</a>
