Add Course Page

--- a/Assignment 1/pages/instructorHomePage.html
+++ b/Assignment 1/pages/instructorHomePage.html
@@ -65,14 +65,15 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Data Structures in C++</h5>
                             <p class="card-text">Manage the Data Structures course content and students.</p>
-                            <a href="#" class="btn btn-primary">Manage Course</a>
+                             <a href="#" class="btn btn-primary">Manage Course</a> 
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="text-center mt-5">
-            <a href="#" class="btn btn-success">Add New Course</a>
+            <!-- <a href="#" class="btn btn-success">Add New Course</a> -->
+            <button class="btn btn-primary" onclick="window.location.href='addCourse.html'">Add New Course</button>
         </div>
     </section>
 </body>
