Course Details Page Added links to corresponfing links

--- a/Assignment 1/pages/coursePage.html
+++ b/Assignment 1/pages/coursePage.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="learnerDashboard.html">Dashboard</a>
+                        <a class="nav-link" href="learnerHomePage.html">Dashboard</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Profile</a>
@@ -41,7 +41,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Python Programming</h5>
                             <p class="card-text">Learn Python from basics to advanced with real-world examples.</p>
-                            <a href="#" class="btn btn-primary">View Course</a>
+                            <a href="viewCourse.html" class="btn btn-primary">View Course</a>
                         </div>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">JavaScript Fundamentals</h5>
                             <p class="card-text">Master the core concepts of JavaScript and build dynamic websites.</p>
-                            <a href="#" class="btn btn-primary">View Course</a>
+                            <a href="viewCourse.html" class="btn btn-primary">View Course</a>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Data Structures in C++</h5>
                             <p class="card-text">Understand the fundamentals of data structures and algorithms with C++.</p>
-                            <a href="#" class="btn btn-primary">View Course</a>
+                            <a href="viewCourse.html" class="btn btn-primary">View Course</a>
                         </div>
                     </div>
                 </div>
