--- a/Assignment 1/pages/landing.html
+++ b/Assignment 1/pages/landing.html
@@ -45,12 +45,14 @@
       <h2 class="mb-5">Our Platform Features</h2>
       <div class="row">
         <div class="col-12 col-md-6 col-lg-3 mb-4">
-          <div class="card feature-item h-100">
-            <i class="fas fa-book feature-icon"></i>
-            <h3>Courses</h3>
-            <p>Access structured learning paths to master different programming languages.</p>
-          </div>
-        </div>
+          <a href="coursePage.html" class="text-decoration-none text-dark">
+              <div class="card feature-item h-100">
+                  <i class="fas fa-book feature-icon"></i>
+                  <h3>Courses</h3>
+                  <p>Access structured learning paths to master different programming languages.</p>
+              </div>
+          </a>
+      </div>
         <div class="col-12 col-md-6 col-lg-3 mb-4">
           <div class="card feature-item h-100">
             <i class="fas fa-brain feature-icon"></i>
