--- a/Assignment 1/pages/learnerHomePage.html
+++ b/Assignment 1/pages/learnerHomePage.html
@@ -51,7 +51,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Python Programming</h5>
                             <p class="card-text">Learn the basics of Python programming with hands-on exercises.</p>
-                            <a href="#" class="btn btn-primary">View Course</a>
+                            <a href="viewCourse.html" class="btn btn-primary">View Course</a>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">JavaScript Basics</h5>
                             <p class="card-text">Master the fundamentals of JavaScript and build dynamic web apps.</p>
-                            <a href="#" class="btn btn-primary">View Course</a>
+                            <a href="viewCourse.html" class="btn btn-primary">View Course</a>
                         </div>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Data Structures in C++</h5>
                             <p class="card-text">Understand core data structures and algorithms using C++.</p>
-                            <a href="#" class="btn btn-primary">View Course</a>
+                            <a href="viewCourse.html" class="btn btn-primary">View Course</a>
                         </div>
                     </div>
                 </div>
