1. Linked pages with Nav bar 2. Linked Problem page with landing page

--- a/Assignment 1/pages/landing.html
+++ b/Assignment 1/pages/landing.html
@@ -54,11 +54,13 @@
           </a>
       </div>
         <div class="col-12 col-md-6 col-lg-3 mb-4">
+          <a href="problems.html" class="text-decoration-none text-dark" >
           <div class="card feature-item h-100">
             <i class="fas fa-brain feature-icon"></i>
             <h3>Practice Problems</h3>
             <p>Solve problems of varying difficulty to hone your skills and boost your confidence.</p>
           </div>
+        </a>
         </div>
         <div class="col-12 col-md-6 col-lg-3 mb-4">
           <div class="card feature-item h-100">
