--- a/Assignment 1/pages/learnerHomePage.html
+++ b/Assignment 1/pages/learnerHomePage.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Courses</a>
+                        <a class="nav-link" href="coursePage.html">Courses</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Profile</a>
@@ -36,9 +36,9 @@
 
     <section class="welcome-section py-5 bg-primary text-light text-center">
         <div class="container">
-            <h1>Welcome, [Learner Name]!</h1>
+            <h1>Welcome, Learner!</h1>
             <p>Continue your learning journey and track your progress below.</p>
-            <a href="#courses" class="btn btn-light btn-lg mt-3">Explore Courses</a>
+            <a href="coursePage.html" class="btn btn-light btn-lg mt-3">Explore Courses</a>
         </div>
     </section>
 
