--- a/Assignment 1/pages/problem.html
+++ b/Assignment 1/pages/problem.html
@@ -43,12 +43,12 @@
     <div class="row">
         <div class="col-md-6">
             <div class="row problem-navbar">
-                <div class="col problem-navbar-active"><button type="button" class="btn">Description</button></div>
-                <div class="col"><button type="button" class="btn">Discussion</button></div>
-                <div class="col"><button type="button" class="btn">Submission</button></div>
-                <div class="col"><button type="button" class="btn">Hint</button></div>
+                <div class="col problem-navbar-active mx-2"><button type="button" class="btn">Description</button></div>
+                <div class="col navbar-hover mx-2"><button type="button" class="btn">Discussion</button></div>
+                <div class="col navbar-hover mx-2"><button type="button" class="btn">Submission</button></div>
+                <div class="col navbar-hover mx-2"><button type="button" class="btn">Hint</button></div>
             </div>
-            <div class="col">
+            <div class="col p-3">
                 <h2 class="prob-title">Gas Station</h2>
                 <p class="text-muted">Programming • Greedy Algorithm</p>
                 <span class="badge badge-success">Easy</span><span>52.5% Success</span>
