--- a/Assignment 1/pages/problems.html
+++ b/Assignment 1/pages/problems.html
@@ -18,10 +18,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Practice</a>
+                <a class="nav-link nav-active" href="#">Practice</a>
             </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#">Courses</a>
+                  <a class="nav-link" href="coursePage.html">Courses</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#">Profile</a>
